# api_reference/api.yaml
@@ -1,63 +1,158 @@
 openapi: 3.0.0
 info:
-  title: 店舗検索 API
+  title: ブリトー屋さんの場所管理 API
   version: 1.0.0
-  description: 登録されてる店舗情報の取得、新規登録をする。
+  description: 登録されてる店舗情報の取得、登録、更新、削除をする。
 paths:
-  /shops:
+  /shops/info:
     get:
       summary: 全ての店舗情報を取得
       description: 登録されてるブリトー屋さんの店舗情報を取得する。
       responses:
         "200":
-          description: Success
+          description: 店舗情報取得成功
           content:
             application/json:
-              example:
-                shopList:
-                  shop_id: 1
-                  shop_name: Elsocalo Burito
-                  location: { type: Point, coordinates: [139.6917, 35.6895] }
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: integer
+                    example: 200
+                  message:
+                    type: string
+                    example: Success
+                  shopList:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        shop_id:
+                          type: integer
+                          example: 1
+                        shop_name:
+                          type: string
+                          example: Elsocalo Burito
+                        longitude:
+                          type: number
+                          format: float
+                          example: 139.6917
+                        latitude:
+                          type: number
+                          format: float
+                          example: 35.6895
+                        prefecture:
+                          type: string
+                          example: 大阪府
+                        city:
+                          type: string
+                          example: 大阪市北区
+                        street:
+                          type: string
+                          example: 豊崎３丁目１９−３
+                        menu_list:
+                          type: string
+                          example: nachos,tacos,guacamole
         "400":
-          description: Bad Request
+          description: パラメータ不正
           content:
             application/json:
               example:
                 code: 400
                 message: Bad Request
         "404":
-          description: Not Found
+          description: ページが見つからない
           content:
             application/json:
               example:
                 code: 404
                 message: Not Found
         "408":
-          description: Request Timeout
+          description: タイムアウト
           content:
             application/json:
               example:
                 code: 408
                 message: Request Timeout
         "500":
-          description: Error
+          description: サーバーエラー
           content:
             application/json:
               example:
                 code: 500
-                message: Error
+                message: Internal Server Error
     post:
-      summary: Create a new user
-      description: Creates a new user record.
+      summary: 新しい店の情報を追加
+      description: ブリトー屋さんの情報を新規登録
       requestBody:
         required: true
         content:
           application/json:
-            example:
-              name: New User
+            schema:
+              type: object
+              properties:
+                shop_id:
+                  type: integer
+                  example: 1
+                shop_name:
+                  type: string
+                  example: Elsocalo Burito
+                longitude:
+                  type: number
+                  format: float
+                  example: 139.6917
+                latitude:
+                  type: number
+                  format: float
+                  example: 35.6895
+                prefecture:
+                  type: string
+                  example: 大阪府
+                city:
+                  type: string
+                  example: 大阪市北区
+                street:
+                  type: string
+                  example: 豊崎３丁目１９−３
+                menu_list:
+                  type: string
+                  example: nachos,tacos,guacamole
       responses:
-        "201":
-          description: User created successfully
+        "200":
+          description: 登録成功
+          content:
+            application/json:
+              example:
+                code: 200
+                message: "Success"
+        "400":
+          description: パラメータ不正
+          content:
+            application/json:
+              example:
+                code: 400
+                message: Bad Request
+        "404":
+          description: ページが見つからない
+          content:
+            application/json:
+              example:
+                code: 400
+                message: Bad Request
+        "408":
+          description: タイムアウト
+          content:
+            application/json:
+              example:
+                code: 408
+                message: Request Timeout
+        "500":
+          description: サーバーエラー
+          content:
+            application/json:
+              example:
+                code: 500
+                message: Internal Server Error
   /shops/info/{id}:
     parameters:
       - name: id
@@ -65,58 +160,115 @@ paths:
         required: true
         schema:
           type: integer
-    get:
-      summary: Get a user by ID
-      description: Retrieves a user record by ID.
-      responses:
-        "200":
-          description: The user record
-          content:
-            application/json:
-              example:
-                id: 1
-                name: John Doe
     put:
-      summary: Update a user by ID
-      description: Updates a user record by ID.
+      summary: idで指定した店の情報を更新
+      description: 該当の店の情報を更新する。
       requestBody:
         required: true
         content:
           application/json:
-            example:
-              name: Updated User
+            schema:
+              type: object
+              properties:
+                shop_id:
+                  type: integer
+                  example: 1
+                shop_name:
+                  type: string
+                  example: Elsocalo Burito
+                longitude:
+                  type: number
+                  format: float
+                  example: 139.6917
+                latitude:
+                  type: number
+                  format: float
+                  example: 35.6895
+                prefecture:
+                  type: string
+                  example: 大阪府
+                city:
+                  type: string
+                  example: 大阪市北区
+                street:
+                  type: string
+                  example: 豊崎３丁目１９−３
+                menu_list:
+                  type: string
+                  example: nachos,tacos,guacamole
       responses:
         "200":
-          description: User updated successfully
-    delete:
-      summary: Delete a user by ID
-      description: Deletes a user record by ID.
-      responses:
-        "204":
-          description: User deleted successfully
-  /shops/ranking:
-    get:
-      summary: Get a list of users
-      description: Retrieves a list of user records.
-      responses:
-        "200":
-          description: A list of user records
+          description: 更新成功
           content:
             application/json:
               example:
-                - id: 1
-                  name: John Doe
-                - id: 2
-                  name: Jane Smith
-    post:
-      summary: Create a new user
-      description: Creates a new user record.
-      requestBody:
-        required: true
-        content:
-          application/json:
-            example:
-              name: New User
+                code: 200
+                message: "Success"
+        "400":
+          description: パラメータ不正
+          content:
+            application/json:
+              example:
+                code: 400
+                message: Bad Request
+        "404":
+          description: ページが見つからない
+          content:
+            application/json:
+              example:
+                code: 404
+                message: Not Found
+        "408":
+          description: タイムアウト
+          content:
+            application/json:
+              example:
+                code: 408
+                message: Request Timeout
+        "500":
+          description: サーバーエラー
+          content:
+            application/json:
+              example:
+                code: 500
+                message: Internal Server Error
+
+    delete:
+      summary: idで指定した店の情報を削除
+      description: 該当の店の情報を削除する。
       responses:
-        "201":
-          description: User created successfully
+        "200":
+          description: 削除成功
+          content:
+            application/json:
+              example:
+                code: 200
+                message: Success
+        "400":
+          description: パラメータ不正
+          content:
+            application/json:
+              example:
+                code: 400
+                message: Bad Request
+        "404":
+          description: ページが見つからない
+          content:
+            application/json:
+              example:
+                code: 404
+                message: Not Found
+        "408":
+          description: タイムアウト
+          content:
+            application/json:
+              example:
+                code: 408
+                message: Request Timeout
+        "500":
+          description: サーバーエラー
+          content:
+            application/json:
+              example:
+                code: 500
+                message: Internal Server Error
